Git_WGBH_QC/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Audience_Goal__c</fullName>
        <label>Actual Audience Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Cost_Per_Piece__c</fullName>
        <label>Actual Material/Production costs per pie</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Email_Response__c</fullName>
        <label>Actual Email Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Inbound_Calls__c</fullName>
        <label>Actual Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Net_Goal__c</fullName>
        <label>Actual Net Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_ROI__c</fullName>
        <label>Actual Marketing R.O.I./Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue_Goal__c</fullName>
        <label>Actual Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Ttl_Cost__c</fullName>
        <label>Actual Total Material/Production Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Web_Inbound__c</fullName>
        <label>Actual Web Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <inlineHelpText>Look up field related to the contact, each contact falls into a range</inlineHelpText>
        <label>Age Range</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audience_Goal__c</fullName>
        <label>Audience Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Audience_Segment__c</fullName>
        <inlineHelpText>Additional segmentation of the solicitation</inlineHelpText>
        <label>Audience Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B to B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B to C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control/Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M or F or Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Break_Actual_Duration__c</fullName>
        <label>Break Actual Duration</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Challenges__c</fullName>
        <label>Break Challenges</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_Grouping_Code__c</fullName>
        <label>CDP Grouping Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDP_Grouping__c</fullName>
        <label>CDP Grouping</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal Notice 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Mail Effort Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Renewal Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweepstakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition Sweeps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorial/Honorarium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CampaignProgramBreak__c</fullName>
        <label>Program Break Parent</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Program Break</relationshipLabel>
        <relationshipName>CampaignProgramBreak</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Bar_Code_Source__c</fullName>
        <description>Formula field which is made up of many attributes; product/program/ station, campaign, channel, sub-channel, solicitation type, giving segment, industry, audience.  (Another word for Source Code from TA)</description>
        <inlineHelpText>Source Code which will appear on the offer, this code enables us to match the pledge with the payment by household or contact within the household.  It may also be used to track donations from Organizations (companies).</inlineHelpText>
        <label>Campaign Bar Code Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Date__c</fullName>
        <label>Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <inlineHelpText>Description of the campaign, Masterpiece, Freedom Riders, Building WCAI, Wine Auction</inlineHelpText>
        <label>Campaign Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Gender__c</fullName>
        <inlineHelpText>Gender related to the campaign, look up to the gender selection on the contact</inlineHelpText>
        <label>Gender</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Gender)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Group__c</fullName>
        <description>Detail on what activity relates to the Campaign Type; Membership, Mid Level, Leadership, Ralph Lowell Society, Sustainer, Events, Audience Services</description>
        <inlineHelpText>Campaign Type; Annual, Capital, Auction, Event (this is the 3rd values in the Source Code) HAM = WGBH, Annual, Membership</inlineHelpText>
        <label>Campaign Group</label>
        <picklist>
            <controllingField>Campaign_Type__c</controllingField>
            <picklistValues>
                <fullName>Auction In-Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Location_del__c</fullName>
        <label>Campaign Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <inlineHelpText>This campaign name is used for the Campaign Program Reporting Tool and is not to be confused with the Campaign Name used for the out of the box Salesforce text campaign name.</inlineHelpText>
        <label>Campaign Value</label>
        <picklist>
            <controllingField>Product_Program__c</controllingField>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>Campaign Type; Annual, Capital, Auction, Event (this is the 2nd value in the source code i.e. HAM = WGBH, Annual, Major Gift</description>
        <inlineHelpText>Campaign is a marketing campaign that refers to a general theme that runs through every touch.</inlineHelpText>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaing_Program_Break_Count__c</fullName>
        <label>Campaign Program Break Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaing_Program_Count__c</fullName>
        <label>Campaign Program Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Campaign Type; Annual, Capital, Auction, Event (this is the 2nd value in the source code i.e. HAM = WGBH, Annual, Major Gift</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic &amp; Folk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids &amp; Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lectures &amp; Screenings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museums &amp; Tours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theater &amp; Dance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Technique__c</fullName>
        <description>Technique</description>
        <inlineHelpText>Channel is the mechanism regarding how we touch the donor or potential donor</inlineHelpText>
        <label>Channel (Technique)</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chart_Est_vs_Actual_Perc__c</fullName>
        <formula>/* ref: http://code.google.com/apis/chart/docs/chart_params.html */
IMAGE(&quot;http://chart.apis.google.com/chart?&quot; &amp; 
&quot;chxt=y&amp;chbh=a,5&amp;chs=350x200&amp;cht=bvg&quot; &amp;
&quot;&amp;chdl=Estimate|Actual&amp;chxt=x,y&amp;chxl=0:|Email Response|1:|25%|50%|75%|100%&quot; &amp;
&quot;&amp;chxs=1p&quot; &amp;
&quot;&amp;chco=4D89F9,000000&amp;chd=t:&quot; &amp; 

/* Estimated/Target Values */  
TEXT(Email_Response__c * 100)
&amp; &quot;|&quot; &amp;

/* Actuals */
TEXT(Actual_Email_Response__c * 100)

, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chart: Email Response Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart_Est_vs_Actual_USD__c</fullName>
        <formula>/* ref: http://code.google.com/apis/chart/docs/chart_params.html */
IMAGE(&quot;http://chart.apis.google.com/chart?&quot; &amp; 
&quot;chxt=y&amp;chbh=a,5&amp;chs=350x200&amp;cht=bvg&quot; &amp;
&quot;&amp;chdl=Estimate|Actual&amp;chxt=x,y&amp;chxl=0:|Total Cost|1:|100|250|500|1000&quot; &amp;
&quot;&amp;chds=0,1000&quot; &amp;
&quot;&amp;chco=4D89F9,000000&amp;chd=t:&quot; &amp;

/* Estimated/Target Values */  
TEXT(Ttl_Cost__c) 

&amp; &quot;|&quot; &amp;

/* Actuals */
TEXT(Actual_Ttl_Cost__c) 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chart: Total Cost Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Per_X__c</fullName>
        <label>Material/Production costs per piece</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Package__c</fullName>
        <label>Creative Package</label>
        <picklist>
            <picklistValues>
                <fullName>897ADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTIONUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANNFUNNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANNUALFU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAILAPSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIR7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAREJOIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLASSADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FALLPREV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENPENTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INV1R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INV28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVCURWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVSUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVSUBWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVVOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVVOLWB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <formula>DATEVALUE(Start_Time_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <inlineHelpText>Define if the campaign is restricted or unrestricted</inlineHelpText>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_Date_and_Time__c</fullName>
        <inlineHelpText>time and date of the offer drop</inlineHelpText>
        <label>Drop Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Drop_Quantity__c</fullName>
        <label>Drop Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effort_for_Project__c</fullName>
        <description>For non-pledge sources, the effort represents the specific attempt within a fund raising campaign.  First Renewal Effort for May 2011 would be 01, while the group receiving their 5th would be 05.</description>
        <inlineHelpText>Please select which mailing is being used for this effort, is it the first time this type of mailing has gone out for a renewal, upsell/upgrade or the 4th, etc.  For Pledge sources, the effort wouldn&apos;t exist, select the calendar date for start date</inlineHelpText>
        <label>Effort for Project</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Response__c</fullName>
        <label>Email Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Time_Date__c</fullName>
        <inlineHelpText>End date and time of the campaign</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Image_URL__c</fullName>
        <label>Event Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Logo__c</fullName>
        <inlineHelpText>Insert the image or the event url by clicking into the image</inlineHelpText>
        <label>Event Image</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Owner__c</fullName>
        <inlineHelpText>Person who entered the Event or the direct WGBH contact for the event</inlineHelpText>
        <label>Event Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Url__c</fullName>
        <label>Event Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_segment_Level1__c</fullName>
        <label>Financial Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <controllingField>Campaign_Group__c</controllingField>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Join</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed/Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>